# decent-configuration-console

./: .editorconfig  .gitignore  71-bluecombo-halfpad.rules  Makefile  README.md  build.py  datatypes.py  fakepad.py  main.py  model.py  pad.py  pyproject.toml  qtquickcontrols2.conf  resources.qrc  usb.py  util.py
ui/: CurveView.qml  Main.qml  PanelView.qml  ProfileView.qml  SensorView.qml
