[project]
name = "decent-configuration-console"
version = "0.1.0"
description = "Unofficial configuration app for the BlueCombo Halfpad"
license = "GPL-3.0-or-later"
icense-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyside6>=6.10.1",
]

[tool.ruff]
line-length = 100
ignore = ["E701"]

[tool.ruff.format]
quote-style = "single"
line-ending = "lf"
